--- a/SpitoShareDart/web/style.css
+++ b/SpitoShareDart/web/style.css
@@ -227,6 +227,7 @@ paper-tab#tab-src {
 }
 
   #editor-exp {
+      position: relative;
       width: 95%;
       display: block;
       margin: 0 auto;
@@ -236,11 +237,39 @@ paper-tab#tab-src {
     #editor-exp-slider {
       /*height: 200px;*/
         margin: 10px auto;
-        width: 600px;
-        max-width: 60%;
+        width: 90%;
       display: block;
-      font-size: 80%;
+      font-size: 100%;
     }
+
+    #editor-exp-slider, .ui-slider {
+        height: 0.8em !important;
+        border-radius: 2px !important;
+        border: 1px dotted #bfbfbf;
+        background: #fafafa !important;
+    }
+        /*#editor-exp-slider .ui-state-default {*/
+        #editor-exp-slider .ui-slider-handle {
+            outline: none;
+            border: 1px solid #eeeeee;
+            border-radius: 0;
+            background: #920000;
+        }
+            /*#editor-exp-slider .ui-state-default:hover {*/
+            #editor-exp-slider .ui-slider-handle:hover {
+                cursor: default !important;
+                border: solid 1px #f0f0f0;
+                -moz-box-shadow: 0px 0px 3px 1px #bfbfbf;
+                -webkit-box-shadow: 0px 0px 3px 1px #bfbfbf;
+                box-shadow: 0px 0px 3px 1px #bfbfbf;
+            }
+            #editor-exp-slider .ui-slider-handle.ui-state-active {
+                border: solid 1px #f0f0f0;
+                -moz-box-shadow: 0px 0px 3px 1px #bfbfbf;
+                -webkit-box-shadow: 0px 0px 3px 1px #bfbfbf;
+                box-shadow: 0px 0px 3px 1px #bfbfbf;
+            }
+
     #editor-exp-val {
       display: block;
         min-width: 200px;
