--- a/SpitoShareDart/web/style.css
+++ b/SpitoShareDart/web/style.css
@@ -303,7 +303,7 @@ body {
   -moz-box-shadow: 0px 0px 5px 1px #bfbfbf;
   -webkit-box-shadow: 0px 0px 5px 1px #bfbfbf;
   box-shadow: 0px 0px 5px 1px #bfbfbf;
-  background-color: #fafafa;
+  background-color: #fdfdfd;
 }
 .editor-input-text:focus, .editor-input-text:active{
   border: solid 1px #f0f0f0;
