--- a/SpitoShareDart/web/style.css
+++ b/SpitoShareDart/web/style.css
@@ -100,6 +100,12 @@ body {
   background-color: #f0f0f0;
 }
 
+#site-header a {
+    text-decoration: none;
+    margin: 0;
+    color: inherit;
+}
+
 #site-header paper-icon-button {
   margin: 0px;
 }
