--- a/SpitoShareDart/web/style.css
+++ b/SpitoShareDart/web/style.css
@@ -20,6 +20,18 @@ body {
   clear: both;
 }
 
+.float-left {
+    float: left;
+}
+
+.float-right {
+    float: right;
+}
+
+.disabled-element {
+    display: none;
+}
+
 .io-orange {
   color: #e09e04;
 }
@@ -152,6 +164,10 @@ body {
     font-size: 14px;
 }
 
+.content {
+    width: 100%;
+}
+
 #editor-tools {
   position: relative;
   width: 100%;
@@ -175,9 +191,16 @@ body {
       margin: 5px 0;
   }
 
+#spito-editor {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
 #editor {
   position: relative;
-  margin-top: 10px;
+  margin: 10px 0 20px 0;
 }
 
 #editor-tools-bottom {
@@ -224,6 +247,7 @@ body {
             border: 1px solid #eeeeee;
             border-radius: 0;
             background: #920000;
+            z-index: 0;
         }
             /*#editor-exp-slider .ui-state-default:hover {*/
             #editor-exp-slider .ui-slider-handle:hover {
@@ -291,13 +315,13 @@ body {
         }
 
   #editor-text {
-    margin: 10px 0;
     width: 100%;
     max-width: 100%;
     min-height: 300px;
   }
 
 .editor-input-text {
+    width: 100%;
     font-family: 'Open Sans', 'Lato', monospace;
     font-size: 14px;
     color: #333333;
@@ -317,6 +341,7 @@ body {
   -webkit-box-shadow: 0px 0px 5px 1px #9f9f9f;
   box-shadow: 0px 0px 5px 1px #9f9f9f;
 }
+
 
 @media (max-width: 650px) {
     #site-header-logo img {
