--- a/SpitoShareDart/web/style.css
+++ b/SpitoShareDart/web/style.css
@@ -168,6 +168,23 @@ body {
     width: 100%;
 }
 
+#new-spit-form {
+    width: 100%;
+    margin: 0 auto;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+#new-spit-form button {
+    display: inline-block;
+    background: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
+    border: none;
+}
+
 #editor-tools {
   position: relative;
   width: 100%;
