--- a/SpitoShareDart/web/style.css
+++ b/SpitoShareDart/web/style.css
@@ -2,16 +2,25 @@
 /*@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin);*/
 @import url(http://fonts.googleapis.com/css?family=Lato:400,700&subset=latin);
 
+/* BOX-SIZING RESET RULES WITH INHERIT */
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+/***************************************/
+
 body {
   background-color: #ffffff;/*#F8F8F8;*/
   font-family: 'Open Sans', 'Lato', sans-serif;
   font-size: 14px;
   font-weight: normal;
   line-height: 1.2em;
-  margin: 15px;
-
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-    -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-touch-callout: none;
+  margin: 0;
+  padding: 0;
 }
 
 .group-clearfix:after {
@@ -80,9 +89,14 @@ body {
   color: #920000;
 }
 
+#spitoshare-app {
+  padding: 0;
+  margin: 0;
+}
 
 #outer-container {
-
+  padding: 0;
+  margin: 0;
 }
 
 #site-drawer {
@@ -91,6 +105,10 @@ body {
 
 #site-drawer-header {
   background-color: #f0f0f0;
+  height: 68px;
+  box-shadow: 0px 5px 5px 0px #BEBCCD;
+  -webkit-box-shadow: 0px 5px 5px 0px #BEBCCD;
+  -moz-box-shadow: 0px 5px 5px 0px #BEBCCD;
 }
 
 #site-drawer-menu {
@@ -108,8 +126,18 @@ body {
   color: #666666;
 }
 
-#site-header {
+#outer-site-header {
   background-color: #f0f0f0;
+  padding: 10px;
+  margin: 0;
+  box-shadow: 0px 5px 5px 0px #BEBCCD;
+  -webkit-box-shadow: 0px 5px 5px 0px #BEBCCD;
+  -moz-box-shadow: 0px 5px 5px 0px #BEBCCD;
+}
+
+#site-header {
+  width: 100%;
+  /*background-color: #f0f0f0;*/
 }
 
 #site-header a {
@@ -123,8 +151,20 @@ body {
 }
 
 #site-header-title {
+  float: left;
   font-size: 18px;
   font-weight: bolder;
+  vertical-align: middle;
+}
+
+#site-header-drawer {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#site-header-title-text {
+  display: inline-block;
+  vertical-align: middle;
 }
 
 #site-header-title sup {
@@ -133,18 +173,40 @@ body {
 
 #site-header-logo {
   text-align: center;
+  vertical-align: middle;
 }
 #site-header-logo img {
   width: 48px;
-  position: absolute;
+  /*position: absolute;
   left: calc(50% - 24px);
-  top: 8px;
+  top: 8px;*/
+  vertical-align: middle;
+}
+
+#site-header-tools {
+  float: right;
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+  vertical-align: middle;
+}
+
+#site-header-tools:before {
+  content: '';
+  display: inline-block;
+  width: 0;
+  height: 100%;
+  vertical-align: middle;
+}
+
+#site-header-tools-btn {
+  display: inline-block;
   vertical-align: middle;
 }
 
 #outer-content-header {
   padding: 0;
-    margin: 0;
+  margin: 0;
 }
 
 #content-header {
@@ -153,19 +215,24 @@ body {
   margin: 0 auto;
 }
 
-#outer-content {
+.outer-content {
     padding: 20px 0 20px 0;
 }
 
-#content-container {
+.content-container {
   width: 90%;
   max-width: 1000px;
   margin: 0 auto;
-    font-size: 14px;
+  font-size: 14px;
 }
 
 .content {
     width: 100%;
+    display: none;
+}
+
+.content-selected {
+  display: block;
 }
 
 #new-spit-form {
