--- a/SpitoShareDart/web/style_drawer.css
+++ b/SpitoShareDart/web/style_drawer.css
@@ -26,16 +26,24 @@
 }
 
 .gn-menu-wrapper {
+    overflow: hidden;
+    width: 250px;
     position: fixed;
     top: 0;
     bottom: 0;
-    left: 0;
-    overflow: hidden;
-    width: 250px;
-    background: red;
+    left: -250px;
     transform: translateX(-250px); /* will be transitioned to 0px */
     transition: transform 0.3s, width 0.3s;
     z-index: 101;
+}
+
+.gn-menu-wrapper.gn-open-all,
+.gn-menu-wrapper.gn-open-part {
+    left: 0;
+    transform: translateX(0px);
+    box-shadow: 3px 0 5px 0px #a0a0a0;
+    -webkit-box-shadow: 3px 0 5px 0px #a0a0a0;
+    -moz-box-shadow: 3px 0 5px 0px #a0a0a0;
 }
 
 .gn-scroller {
@@ -57,6 +65,7 @@ ul.gn-menu {
 }
 
 .gn-menu li {
+  padding: 5px 0;
 }
 .gn-menu li:hover, .gn-menu li:focus {}
 .gn-menu li:not(:first-child) {
@@ -65,7 +74,7 @@ ul.gn-menu {
 
 .gn-menu li a {
   display: block;
-  padding: 10px 0;
+  padding: 5px 0;
   text-decoration: none;
   color: inherit;
 }
@@ -100,14 +109,6 @@ ul.gn-menu {
 }
 .gn-icon-about:before {
   content: "\e972";
-}
-
-.gn-menu-wrapper.gn-open-all,
-.gn-menu-wrapper.gn-open-part {
-    transform: translateX(0px);
-    box-shadow: 3px 0 5px 0px #a0a0a0;
-    -webkit-box-shadow: 3px 0 5px 0px #a0a0a0;
-    -moz-box-shadow: 3px 0 5px 0px #a0a0a0;
 }
 
 .gn-menu-header {
