--- a/SpitoShareDart/web/style_drawer.css
+++ b/SpitoShareDart/web/style_drawer.css
@@ -1,3 +1,8 @@
+/*************
+ * Tutorial on Google Nexus navigation drawer:
+ * http://tympanus.net/codrops/2013/07/30/google-nexus-website-menu/
+ */
+
 .display-none {
   display: none;
 }
@@ -85,32 +90,6 @@ ul.gn-menu {
   color: inherit;
 }
 
-/* IMPORT THIS INTO HTML
- * <link rel="stylesheet" href="http://i.icomoon.io/public/temp/0ed3c7581b/UntitledProject/style.css">
- */
-.gn-icon::before {
-    display: inline-block;
-    width: 60px;
-    text-align: center;
-    text-transform: none;
-    font-weight: normal;
-    font-style: normal;
-    font-variant: normal;
-    font-family: 'icomoon';
-    line-height: 1;
-    speak: none;
-    -webkit-font-smoothing: antialiased;
-}
-.gn-icon-home:before {
-  content: "\e900";
-}
-.gn-icon-faq:before {
-  content: "\e9ba";
-}
-.gn-icon-about:before {
-  content: "\e972";
-}
-
 .gn-menu-header {
   font-size: 18px;
   width: 100%;
@@ -145,6 +124,81 @@ ul.gn-menu {
 }
 */
 
+/*******************************************
+ *  MENU ICONS
+ */
 
+/*
+@font-face {
+	font-family: 'icomoon';
+	src:url('http://i.icomoon.io/public/temp/0ed3c7581b/UntitledProject/icomoon.eot?eshi1b');
+	src:url('http://i.icomoon.io/public/temp/0ed3c7581b/UntitledProject/icomoon.eot?#iefixeshi1b') format('embedded-opentype'),
+		url('http://i.icomoon.io/public/temp/0ed3c7581b/UntitledProject/icomoon.woff?eshi1b') format('woff'),
+		url('http://i.icomoon.io/public/temp/0ed3c7581b/UntitledProject/icomoon.ttf?eshi1b') format('truetype'),
+		url('http://i.icomoon.io/public/temp/0ed3c7581b/UntitledProject/icomoon.svg?eshi1b#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+*/
 
+@font-face {
+    font-family: 'icomoon';
+    src:url('fonts/icomoon.eot?eshi1b');
+    src:url('fonts/icomoon.eot?#iefixeshi1b') format('embedded-opentype');
+    src:url('fonts/icomoon.ttf?eshi1b') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+    font-family: 'icomoon';
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-home:before {
+    content: "\e900";
+}
+
+.icon-users:before {
+    content: "\e972";
+}
+
+.icon-list:before {
+    content: "\e9ba";
+}
+
+/* IMPORT THIS INTO HTML
+ * <link rel="stylesheet" href="http://i.icomoon.io/public/temp/0ed3c7581b/UntitledProject/style.css">
+ */
+.gn-icon::before {
+    display: inline-block;
+    width: 60px;
+    text-align: center;
+    text-transform: none;
+    font-weight: normal;
+    font-style: normal;
+    font-variant: normal;
+    font-family: 'icomoon';
+    line-height: 1;
+    speak: none;
+    -webkit-font-smoothing: antialiased;
+}
+.gn-icon-home:before {
+    content: "\e900";
+}
+.gn-icon-faq:before {
+    content: "\e9ba";
+}
+.gn-icon-about:before {
+    content: "\e972";
+}
 
