fixing some bugs with buttons left as paper-button

--- a/SpitoShareDart/web/style.css
+++ b/SpitoShareDart/web/style.css
@@ -500,6 +500,8 @@ html /deep/ core-icon {
     font-size: 22px;
 }
 */
+.paper-button[type="submit"],
+.paper-button[type="button"],
 .paper-button {
     display: inline-block;
     position: relative;
