--- a/SpitoShareDart/web/styles/style_drawer.css
+++ b/SpitoShareDart/web/styles/style_drawer.css
@@ -143,9 +143,9 @@ ul.gn-menu {
 
 @font-face {
     font-family: 'icomoon';
-    src:url('fonts/icomoon.eot?eshi1b');
-    src:url('fonts/icomoon.eot?#iefixeshi1b') format('embedded-opentype');
-    src:url('fonts/icomoon.ttf?eshi1b') format('truetype');
+    src:url('../fonts/icomoon.eot?eshi1b');
+    src:url('../fonts/icomoon.eot?#iefixeshi1b') format('embedded-opentype');
+    src:url('../fonts/icomoon.ttf?eshi1b') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
